# ZenFlux

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
dashboard/: Dockerfile  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  mockData.ts  types.ts
dashboard/src/components/: RegimePanel.tsx  StressChart.tsx  ZenGauge.tsx
tests/: conftest.py  test_engine.py  test_models.py  test_signals_correlation.py  test_signals_dislocation.py  test_signals_flow.py  test_signals_liquidity.py  test_signals_volatility.py  test_utils.py
zenflux/: __init__.py  engine.py  models.py
zenflux/signals/: __init__.py  correlation_break.py  flow_imbalance.py  liquidity_stress.py  price_dislocation.py  volatility_regime.py
zenflux/utils/: __init__.py  cache.py  normalizer.py
